--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,15 +11,11 @@ body {
 
 .editor {
   display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.editorWrapper{
-  display: block;
-  width: 100%;
+  width: 85%;
+  margin-left: 7.5%;
+  border-style: solid;
+  border-width: 5px;
+  border-color: aqua;
+  padding: 50;
   height: 30%;
-  margin: 5% 5% 5% 5%;
-  border: 25px darkblue;
-  padding: 10px;
 }
